--- a/MERJMirrorWeb/WebContent/tester.xhtml
+++ b/MERJMirrorWeb/WebContent/tester.xhtml
@@ -5,12 +5,11 @@
 	  xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
-
-  
   <body>
+    <!-- Test to run on the templates. -->
     <ui:composition template = "templates/commonTemplate.xhtml">
-        
+
     </ui:composition>
   </body>
-  
+
 </html>
