--- a/MERJMirrorWeb/WebContent/prefList.xhtml
+++ b/MERJMirrorWeb/WebContent/prefList.xhtml
@@ -38,7 +38,7 @@
 
                 </p:dataTable>
 
-                <p:commandButton value = "#{applicationBean.getProperty('label.button.active')}" action = "#{preferenceBean.updateActive()}" />
+                <p:commandButton value = "#{applicationBean.getProperty('label.button.active')}" action = "#{preferenceBean.updateActive()}" update = "prefList"/>
                 <p:commandButton value = "Create New Preference" action = "newPref.jsf?faces-redirect=true"/>
                 <p:commandButton value = "Edit Selected Preference" action = "#{preferenceBean.createEdit()}"/>
                 <p:commandButton value = "Delect Preference" action = "#{preferenceBean.deletePref()}" update = "prefList">
