--- a/MERJMirrorWeb/WebContent/start.xhtml
+++ b/MERJMirrorWeb/WebContent/start.xhtml
@@ -1,34 +1,34 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version = "1.0" encoding = "ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+<html xmlns    = "http://www.w3.org/1999/xhtml"
+      xmlns:h  = "http://java.sun.com/jsf/html"
+      xmlns:f  = "http://java.sun.com/jsf/core"
+      xmlns:ui = "http://java.sun.com/jsf/facelets"
+      xmlns:p  = "http://primefaces.org/ui">
 
-  <h:body>
-    <!-- Starting web page for the project makes them select a user to log in as. -->
-    <ui:composition template = "/templates/commonTemplate.xhtml">
+    <h:body>
+        <!-- Starting web page for the project makes them select a user to log in as. -->
+        <ui:composition template = "/templates/commonTemplate.xhtml">
 
-      <ui:define name = "content">
+            <ui:define name = "content">
 
-        <br />
-        <br/>
+                <br />
+                <br/>
 
-        <p:outputLabel for="users" value="Select User:" />
-        <h:panelGrid columns = "1" style = "margin-bottom:10px" cellpadding="5">
-          <p:selectOneRadio id="users" value="#{userBean.activeUser}" required = "true" layout = "grid" columns = "1">
-            <f:selectItems value="#{userBean.users}" var = "c" itemLabel = "#{user}" itemValue = "#{user}" />
-          </p:selectOneRadio>
-        </h:panelGrid>
+                <p:outputLabel for = "users" value = "#{applicationBean.getProperty('label.user.start')}" />
+                <h:panelGrid columns = "1" style = "margin-bottom:10px" cellpadding = "5">
+                    <p:selectOneRadio id = "users" value = "#{userBean.activeUser}" required = "true" layout = "grid" columns = "1">
+                        <f:selectItems value = "#{userBean.users}" var = "c" itemLabel = "#{user}" itemValue = "#{user}" />
+                    </p:selectOneRadio>
+                 </h:panelGrid>
 
-        <p:commandButton value = "Enter" ajax = "false" action = "prefList.jsf?faces-redirect=true"/>
+                <p:commandButton value = "#{applicationBean.getProperty('button.label.enter')}" ajax = "false" action = "prefList.jsf?faces-redirect=true"/>
 
-      </ui:define>
+            </ui:define>
 
-    </ui:composition>
+        </ui:composition>
 
-  </h:body>
+    </h:body>
 
 </html>
