Fixing the Edit Preference Button

--- a/MERJMirrorWeb/WebContent/newPref.xhtml
+++ b/MERJMirrorWeb/WebContent/newPref.xhtml
@@ -130,6 +130,10 @@
                     <h:outputLabel for = "stock" value = "#{applicationBean.getProperty('label.pref.stock')}" />
                     <p:inputText id = "stock" value = "#{preferenceBean.stock}" />
                     <h:outputLabel for = "stock" value = "#{applicationBean.getProperty('label.pref.stock.info')}" />
+                    
+                    <h:outputLabel for = "reminder" value = "#{applicationBean.getProperty('label.pref.reminder')}" />
+                    <p:inputText id = "reminder" value = "#{preferenceBean.reminder}" />
+                    <h:outputLabel for = "stock" value = "" />
 
                 </h:panelGrid>
 
